[gd_scene load_steps=18 format=3 uid="uid://binqsx11r7f0n"]

[ext_resource type="Script" path="res://src/enemy/ram/ram_enemy.gd" id="1_02sjg"]
[ext_resource type="Script" path="res://src/player/sprite_manager.gd" id="2_cbvfo"]
[ext_resource type="Script" path="res://src/components/hitbox.gd" id="2_eq6eu"]
[ext_resource type="Texture2D" uid="uid://dykbosi5r21jr" path="res://assets/images/enemy/ram/ram_walk.png" id="3_a6i4y"]
[ext_resource type="Script" path="res://src/components/hurtbox.gd" id="3_kv616"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_vnsqh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_dw7se"]
[ext_resource type="Script" path="res://src/components/animator.gd" id="4_m88ow"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_mdg6v"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_4oxr5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aqfp8"]
radius = 20.0
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e468w"]
radius = 16.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3pha3"]
radius = 30.0
height = 60.0

[sub_resource type="Animation" id="Animation_0xuwx"]
resource_name = "charging_N"
length = 2.0

[sub_resource type="Animation" id="Animation_v8p27"]
resource_name = "ram_N"
loop_mode = 1

[sub_resource type="Animation" id="Animation_2uthj"]
resource_name = "walk_N"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_viykv"]
_data = {
"charging_N": SubResource("Animation_0xuwx"),
"ram_N": SubResource("Animation_v8p27"),
"walk_N": SubResource("Animation_2uthj")
}

[node name="RamEnemy" type="CharacterBody2D" node_paths=PackedStringArray("state_chart", "animator", "label")]
motion_mode = 1
script = ExtResource("1_02sjg")
state_chart = NodePath("StateChart")
animator = NodePath("Animator")
label = NodePath("HealthLabel")

[node name="HealthLabel" type="Label" parent="."]
offset_left = -101.0
offset_top = -134.0
offset_right = 99.0
offset_bottom = -111.0
text = "a"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpriteManager" type="Node2D" parent="."]
scale = Vector2(2, 2)
script = ExtResource("2_cbvfo")

[node name="WalkSprite2D" type="Sprite2D" parent="SpriteManager"]
texture = ExtResource("3_a6i4y")
hframes = 10
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_aqfp8")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("3_kv616")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_e468w")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("2_eq6eu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_3pha3")
disabled = true
debug_color = Color(1, 0, 0, 0.419608)

[node name="Animator" type="Node" parent="." node_paths=PackedStringArray("animation_player")]
script = ExtResource("4_m88ow")
animation_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_viykv")
}

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_vnsqh")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_dw7se")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root"]
script = ExtResource("5_mdg6v")

[node name="ToCharging" type="Node" parent="StateChart/Root/Idle"]
script = ExtResource("6_4oxr5")
to = NodePath("../../Charging")
event = &"idle_finished"

[node name="Charging" type="Node" parent="StateChart/Root"]
script = ExtResource("5_mdg6v")

[node name="ToRam" type="Node" parent="StateChart/Root/Charging"]
script = ExtResource("6_4oxr5")
to = NodePath("../../Ram")
delay_seconds = 2.0

[node name="Ram" type="Node" parent="StateChart/Root"]
script = ExtResource("5_mdg6v")

[node name="ToIdleTimed" type="Node" parent="StateChart/Root/Ram"]
script = ExtResource("6_4oxr5")
to = NodePath("../../Idle")
delay_seconds = 5.0

[node name="ToIdleCollided" type="Node" parent="StateChart/Root/Ram"]
script = ExtResource("6_4oxr5")
to = NodePath("../../Idle")
event = &"ram_collided"

[connection signal="attack_detected" from="HurtBox" to="." method="_on_hurt_box_attack_detected"]
[connection signal="hurt_box_detected" from="HitBox" to="." method="_on_hit_box_hurt_box_detected"]
[connection signal="state_entered" from="StateChart/Root/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Charging" to="." method="_on_charging_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Ram" to="." method="_on_ram_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Ram" to="." method="_on_ram_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Ram" to="." method="_on_ram_state_physics_processing"]
